--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-uglify": "~0.3.0",
     "gulp-jshint": "~1.6.1",
     "gulp-concat": "~2.2.0",
-    "gulp-minify-css": "~0.3.4"
+    "gulp-minify-css": "~0.3.4",
+    "gulp-compass": "~1.1.9"
   }
 }
